# roussillon-type-system

./: CHANGELOG.md  Cargo.toml  README.md  types.plantuml
src/: effect.rs  experimental.rs  factory.rs  identify.rs  identity.rs  lib.rs  parse.rs  types.rs  typing.rs  value.rs
src/types/: algebraic.rs  concept.rs  dynamic.rs  functional.rs  heap.rs  interface.rs  primitive.rs  sequence.rs  typedef.rs
src/typing/: algebraic.rs  concept.rs  functional.rs  gadt.rs  primitive.rs  sequence.rs  typedef.rs
src/value/: boolean.rs  byte.rs  concept.rs  error.rs  function.rs  list.rs  number.rs  operations.rs  record.rs  reference.rs  sequence.rs  union.rs  value_type.rs
