[package]
name = "roussillon-type-system"
description = "A type system for a programming language"
authors = ["Sébastien GELDREICH <trehinos@gmail.com>"]
version = "0.2.3-dev"
edition = "2021"
license = "MIT"
keywords = ["type-system", "types"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
